# rola-reverse

./: .env.example  .gitignore  Cargo.toml  README.md
crates/enabot-cli/: Cargo.toml
crates/enabot-cli/src/: main.rs
crates/enabot-mcp/: Cargo.toml
crates/enabot-mcp/src/: main.rs
crates/enabot-sdk/: Cargo.toml
crates/enabot-sdk/src/: auth.rs  client.rs  commands.rs  config.rs  lib.rs  robot.rs  sidecar.rs
docs/: app-extraction.md  discovery-log.md  enabot-connectivity-research.md  mcp-cloudflare.md  native-transport.md  protocol.md
sidecars/native-rtm/: index.js  package-lock.json  package.json
sidecars/rtc-snapshot/: capture.html  index.js  package-lock.json  package.json
sidecars/rtc-snapshot-native-macos/: Package.swift
sidecars/rtc-snapshot-native-macos/Sources/RtcSnapshotNativeMac/: main.swift
src/: discover.py  lan_search.py  probe.py
src/control/: enabot_login.js  frida_rola_mini_control.js  rola_mini_control.py  rola_rtm_harness.html  rola_rtm_server.js
src/extract/: frida_ebo_creds.js  frida_rola_http_final_dump.js  frida_rola_wide_dump.js
