[workspace]
members = [
  "crates/enabot-cli",
  "crates/enabot-sdk",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/LSRCT/rola-reverse"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
clap = "4.5.53"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
sha1 = "0.10.6"
tokio = "1.48.0"
