[package]
name = "enabot-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "time"] }
